syntax = "proto3";


option java_multiple_files = true;

package com.gsaikiran;

service Hello{
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}